--- a/public/css/master.css
+++ b/public/css/master.css
@@ -40,6 +40,15 @@ nav ul li a:hover {
 	margin: 0;
 	text-decoration: none;
 }
+
+nav ul li a span {
+	background: red;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	padding: 3px 5px;
+}
+
 div#wrapper {
 	padding: 16px;
 	margin-left: 50px;
@@ -201,4 +210,10 @@ li.notification p:nth-child(2) {
 
 p.longText {
 	letter-spacing:1px;
+}
+
+tr.tradeRow td {
+	vertical-align:top;
+	padding-top: 5px;
+	padding-bottom: 10px;
 }
