--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,6 +42,11 @@ html
 								a(href="/logout") Logout
 						-if(user != null && user.role == 'admin') 
 							li
+								a(href="/trade")
+									= "Trade "
+									-if(tradeNotifications)
+										span= " " + tradeNotifications
+							li
 								a(href="/gm/draft") Draft
 							li
 								a(href="/admin") Admin
