--- a/views/team.jade
+++ b/views/team.jade
@@ -102,8 +102,11 @@ block content
 
 	section(id="left" style="width:65%")
 		div
-			p Last Year's Roster:
-				a(style="padding-left:20px" href="/team/" + team.teamId + "/2013") 2013
+			-if(config.isOffseason)
+				p Last Year's Roster:
+					a(style="padding-left:20px" href="/team/" + team.teamId + "/2013") 2013
+			-if(user && user.team != team.teamId && (config.isTradingOn || user.role == 'admin'))
+				a(href="/trade/" + team.teamId) Propose a trade
 			-var nextYear = parseInt(config.year) + 1
 			-if(config.isKeeperPeriod && config.isTeamOwner)
 				h3= "Select your keepers from " + config.year + " roster"
@@ -117,26 +120,6 @@ block content
 			-else
 				p= "Check back after the keeper deadline for " + nextYear + " roster"
 
-			-if(config.isTradingOn)
-				h2 Trades
-				-each trade in inTrades
-					a(href="/gm/trade/" + trade._id)= "From " + trade.from.team
-					-each player in trade.from.players
-						a= player
-
-					-each player in trade.to.players
-						a= player
-					br
-				-each trade in outTrades
-					a(href="/gm/trade/" + trade._id)= "Proposed to " + trade.to.team
-					-for(var i = 0; i < trade.to.players.length; i++) {
-						a(href="/admin/player/" + trade.to.players[i])= trade.to.player_names[i]
-					- }
-
-					-for(var i = 0; i < trade.from.players.length; i++) {
-						a(href="/admin/player/" + trade.from.players[i])= trade.from.player_names[i]
-					- }
-					br
 		div
 			-if((in_vultures && in_vultures.length > 0) || (out_vultures && out_vultures.length > 0))
 				h2 Vultures
