--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ html
 		link(href='http://fonts.googleapis.com/css?family=Dosis' rel='stylesheet' type='text/css')
 
 		block scripts
-			script(type='text/javascript', src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+			script(type='text/javascript', src='http://code.jquery.com/jquery-latest.min.js')
 			//script(type='text/javascript', src='http://code.highcharts.com/highcharts.js')
 			script(type='text/javascript', src="http://code.jquery.com/ui/1.10.4/jquery-ui.js")
 			script(type='text/javascript', src="/public/jquery.tablesorter.js")
