--- a/views/partials/team.jade
+++ b/views/partials/team.jade
@@ -22,7 +22,7 @@ mixin team(players, includeStatus, config)
 		-thisYearSalaryHeader = "Salary";
 		-thisYearContractHeader = "Contract Year";
 
-	table(id='players_' + team.team style="width:100%;border-collapse:collapse;")
+	table(id='players_' + team.team style="width:100%;border-collapse:collapse;" class="hoverable")
 		thead
 			th.position Position
 			th.playerName Name
